<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_fragment_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/Title"
            tools:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnSendToEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_email" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_unauthenticated_tip"
            android:textAlignment="center"
            android:textSize="@dimen/description" />
    </LinearLayout>
