<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:fontFamily="@font/asap_medium"
            android:textSize="28sp"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:hint="E-mail"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="25sp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:hint="@string/user"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvFamilyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/family_name_optional"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etFamilyName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFamilyName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:hint="for family features"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etFamilyName"
            android:background="@drawable/grey_border_topandbottom"
            android:layout_marginBottom="10dp"
            android:id="@+id/btnSubmit"/>


    </RelativeLayout>
    </ScrollView>
</LinearLayout>